SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <label>피드백</label>
    <nameField>
        <displayFormat>Feedback-{000000}</displayFormat>
        <label>Feedback No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>