SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Feedback__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>코멘트</label>
    <type>TextArea</type>
</CustomField>