SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Feedback__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>고객 담당자</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>피드백</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>