SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Feedback__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>영업기회</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>피드백</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>